# LIBERO

./: pyproject.toml
gym_libero/: __init__.py  gymnasium_wrapper.py
libero/libero/bddl_files/libero_spatial_one_bowl/: pick_up_the_black_bowl_between_the_plate_and_the_ramekin_and_place_it_on_the_plate_ood.bddl  tasks_info.txt
