[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libero"
version = "0.1.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Bo Liu" },
  { name = "Yifeng Zhu" },
  { name = "Chongkai Gao" },
  { name = "Yihao Feng" },
  { name = "Qiang Liu" },
  { name = "Yuke Zhu" },
  { name = "Peter Stone" },
]

dependencies = [
  "hydra-core==1.2.0",
  "numpy>=1.24,<2.0",
  "wandb>=0.20.0",
  "easydict==1.9",
  "transformers>=4.52.0",
  "opencv-python-headless>=4.9.0,<4.12",
  "robomimic==0.2.0",
  "einops>=0.8.0",
  "thop==0.1.1-2209072238",
  "robosuite==1.4.0",
  "bddl==1.0.1",
  "future==0.18.2",
  "matplotlib==3.5.3",
  "cloudpickle==2.1.0",
  "gym==0.25.2",
  "torch>=2.2.1,<2.8.0",
  "torchvision>=0.21.0,<0.23.0",
]

[project.optional-dependencies]
lerobot = ["gymnasium>=0.29"]

[project.scripts]
lifelong-main = "libero.lifelong.main:main"
lifelong-eval = "libero.lifelong.evaluate:main"
libero-config_copy = "scripts.config_copy:main"
libero-create_template = "scripts.create_template:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["libero*", "scripts*", "gym_libero*"]
